# vibeflow

./: .gitignore  CONTRIBUTING.md  LICENSE  README.en.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  build_distribution.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: ai_workflow_feedback.md  bug_report.md  feature_request.md
.github/workflows/: ci.yml  tmp-paper-download-only-pr.yml  tmp-paper-fetch-fast-fixed-pr.yml  tmp-paper-fetch-fast-pr.yml  tmp-paper-fetch-pr.yml  tmp-paper-fetch-with-id.yml  tmp-paper-fetch.yml
distribution/kernel_development_pack/: README.md
docs/: 11_训练性能导向内核改进计划.md  12_CompiledBlock完整代码生成计划.md  13_CompiledBlock分阶段实施计划.md  README.md  ab_quality_improvement_plan.md  ascii_flowchart_renderer_plan.md  code_quality_warning_reduction_plan.md  current_implementation_status.md  developer_guide.md  explicit_flow_edges_plan.md  file_structure_quality_final_report.md  file_structure_quality_plan.md  file_structure_quality_progress.md  flowchart_node_semantics_correction_plan.md  generic_quality_check_status.md  implementation_todo.md  kernel_development_guide.md  kernel_target_vision.md  node_health_quality_migration_progress.md  paperflow_kernel_feedback_review.md  strict_flowchart_kernel_redesign.md  strict_kernel_design.md
examples/failure_cases/: README.md  cases.jsonc
examples/integration_sandbox/: .gitignore  README.md  run_all.py
examples/minimal_project/: README.md  config.jsonc  config_with_imports.jsonc  nodes.py  nodesets.jsonc  plugins.py
references/code_quality_tools/: README.md
(+1089 files in other folders)
