[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vibeflow"
version = "0.1.0"
description = "Executable flowchart guardrails for vibe coding and AI-assisted development"
requires-python = ">=3.11"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3",
]
dependencies = []

[project.scripts]
vibeflow = "vibeflow.cli:main"
topology-kernel = "vibeflow.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vibeflow = ["resources/schema/*.schema.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = ["test_*.py", "strict_*.py", "vibeflow_strict.py"]
